[project]
name = "research-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lokeshwaran-M", email = "lokeshwaran.m23072003@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
research-assist = "research_assist:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
